flex grow y align self

--- a/html_css/flex.html
+++ b/html_css/flex.html
@@ -11,10 +11,10 @@
 <body>
 
   <div class="container">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-    <div class="box">Box 4</div>
+    <div class="box" style="flex-grow:1">Box 1</div>
+    <div class="box as-end" style="flex-grow:1">Box 2</div>
+    <div class="box as-center" style="flex-grow:2">Box 3</div>
+    <div class="box as-start" style="flex-grow:3">Box 4</div>
   </div>
 
 </body>
