cambio del titulo

--- a/html_css/float.html
+++ b/html_css/float.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- RESPONSIVE WEB DESIGN -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Mi página Float html</title>
   <style>
     #box1 {
       width: 50%;
