--- a/html_css/array_object.html
+++ b/html_css/array_object.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Array JS</title>
+  <title>Array y Object JS</title>
 </head>
 <body>
 
