--- a/html_css/selector.html
+++ b/html_css/selector.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+  <select id="sel-brand">
+    <option value="h">Honda</option>
+    <option value="s">Suzuki</option>
+    <option value="k">Kawasaki</option>
+  </select>
+
   <input type="text" id="input-msg">
   <button id="btn-ok">Ok</button>
 
